# domains-register-a-govuk-domain

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cypress.config.js  docker-compose-local.yml  docker-compose.yml  local-init.sh  manage.py  package-lock.json  package.json  pyproject.toml  start-server.sh
.github/workflows/: pull-request.yml  start-server.sh
config/: buildspec.yml
cypress/e2e/: autocomplete.cy.js  bad-domain-name.cy.js  bad-email.cy.js  base.cy.js  change-answers.cy.js  change-registrar-details.cy.js  change_applicant_details.cy.js  change_domain_name.cy.js  change_registrant_details.cy.js  change_registrant_org_name.c.js  change_registrant_org_name.cy.js  change_registrar_email_address.cy.js  change_registrar_org_name.cy.js  change_registrar_organisation_name.cy.js  change_registry_details.cy.js  change_uploaded_file.cy.js  cookie-banner.cy.js  error-multiple-submissions.cy.js  error-pages.cy.js  errors-domain-confirmation.cy.js  errors-domain-names.cy.js  errors-domain-purpose.cy.js  errors-domain.cy.js  errors-exemption-upload.cy.js  errors-exemption.cy.js  errors-jump-around.cy.js  errors-minister-upload.cy.js  errors-minister.cy.js  errors-registrant-details.cy.js  errors-registrant-type.cy.js  errors-registrar-details.cy.js  errors-registry-details.cy.js  errors-uploads.cy.js  errors-written-permission-upload.cy.js  errors-written-permission.cy.js  exemption-happy-path.cy.js  exemption_upload_e2e_tests.cy.js  happy-path-1.cy.js  happy-path-route-1-12.cy.js  happy-path-route-1.cy.js  (+30 more)
cypress/support/: e2e.js
request_a_govuk_domain/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
request_a_govuk_domain/admin-theme/: admin-theme.json
request_a_govuk_domain/input/: organisations.csv
request_a_govuk_domain/layout/: content.py
request_a_govuk_domain/request/: admin.py  apps.py  base_form.py  base_from.py  constants.py  context_processors.py  db.py  forms.py  middleware.py  models.py  old_forms.py  old_views.py  tasks.py  utils.py  validators.py  views.py
request_a_govuk_domain/request/admin/: __init__.py  email.py  filters.py  forms.py  mixins.py  model_admins.py  views.py
request_a_govuk_domain/request/forms/: registrant_type.py
request_a_govuk_domain/request/init_guidance/: README.md  domain_name_availability.md  domain_name_rules.md  policy_exemption.md  registrant_org.md  registrant_permission.md  registrant_person.md  registrant_senior_support.md  registrar_details.md  registry_details.md
request_a_govuk_domain/request/migrations/: 0001_initial.py  0002_alter_application_reference.py  0002_alter_application_written_permission_evidence.py  0002_alter_application_written_permission_evidence_and_more.py  0002_alter_review_options_alter_registrant_type.py  0002_registrationdata_delete_userdata.py  0003_historicalreview_registry_details_and_more.py  0003_remove_registrant_organisation_ptr_and_more.py  0004_application_last_updated_and_more.py  0005_alter_historicalreview_registry_details_notes_and_more.py  0008_registrar_active.py  (+25 more)
request_a_govuk_domain/static/: accessible-autocomplete.min.4c270c891ee8.js  govuk-frontend-5.0.0.min.0081e1ec81ad.css  register.css  staticfiles.json
seed/: central-gov-domains.csv  company-names.csv  council-domains.csv  request.json  reviewer_group.json  users.json
tests/: test_500_error.py  test_admin_actions.py  test_admin_approval.py  test_admin_history.py  test_application_submission.py  test_applicationstatus_change_with_celery.py  test_create_reviewer_group.py  test_file_infection.py  test_http_errors.py  test_model_admins.py  test_model_history.py  test_review_sets.py  test_route_number.py  util.py
(+81 files in other folders)
