[tool.poetry]
name = "request_a_govuk_domain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-environ = "^0.11.2"
django-postgres-extra = "^2.0.8"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"
govuk-frontend-django = "^0.4.0"
crispy-forms-gds = "^0.3.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.3.0"}
django-simple-history = "^3.5.0"
pre-commit = "^3.6.2"
clamd = "^1.0.2"
notifications-python-client = "^9.0.0"
python-dotenv = "^1.0.1"
django-admin-interface = "^0.28.6"
django-storages = {extras = ["s3"], version = "^1.14.2"}
django-csp = "^3.8"
sentry-sdk = {extras = ["django"], version = "^2.2.0"}


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.3.0"
ipdb = "^0.13.13"
web-pdb = "^1.6.2"

[tool.mypy]
ignore_missing_imports = true
mypy_path = "."
plugins = ['mypy_django_plugin.main']

[tool.django-stubs]
django_settings_module = "request_a_govuk_domain.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
